<resources>
    <string name="app_name">FlashAlarm</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_alarm_details">AlarmDetailsActivity</string>
    <string name="details_alarm_name">Alarm Name</string>
    <string name="details_repeat_weekly">Repeat Weekly</string>
    <string name="details_sunday">Sunday</string>
    <string name="details_monday">Monday</string>
    <string name="details_tuesday">Tuesday</string>
    <string name="details_wednesday">Wednesday</string>
    <string name="details_thursday">Thursday</string>
    <string name="details_friday">Friday</string>
    <string name="details_saturday">Saturday</string>
    <string name="details_alarm_tone">Alarm Tone</string>
    <string name="details_alarm_tone_default">Select an alarm tone</string>
    <string name="volume_rising">Rising volume</string>
    <string name="flash">Flashlight</string>
    <string name="vibrate">Vibrate</string>
    <string-array name="tone_sources">
        <item>Alarms</item>
        <item>Ringtones</item>
        <item>Extra tones</item>
    </string-array>
    <string name="no_alarm_tone_toast">Alarm tone wasn\'t specified</string>
    <string name="pattern_hint">Alarm pattern may include following characters:\n(1...9) = 10 - 90 ms\n(s)hort = 0.5s\n(m)edium = 1s\n(l)ong = 1.5s\n(e)xtra long = 2s\n(c)onstant = constantly on</string>
    <string name="pattern_remove_constant">To set custom pattern remove (c)onstant character first.</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="digital_picker">Digital time picker</string>
    <string name="bug_text">The following issue appeared after I took these steps:</string>
    <string name="bug_adress">nizhotech@gmail.com</string>
    <string name="bug_toast_body">Please email to</string>
    <string name="fragment_custom_label">Enter custom patterns:</string>
    <string name="title_activity_help">HelpActivity</string>

    <!--Help texts-->
    <string name="settings_help">1. Click on a label to view a hint.
        \n2. Click on an icon to play the pattern you entered in [3].
        \n3. Enter pattern for vibration or flash. For instance entering \"smle\" for vibration would produce (s)hort, (m)edium, (l)ong and
        (e)xtra long bursts of vibration which repeats once alarm is triggered. Entering \"c\" would remove entire pattern and stands
        for (c)onstant on for both vibration and flash light.
        \n4. Digital picker allows entering digits in Alarm Settings when setting up alarm time. When off, digital time picker is replaced with analog watch face.
    </string>


      <string name="active_help">1. Add new alarm
          \n2. Alarm time. Shows in 24 or 12 hour format depending on your phone settings.
          \n3. Click and hold anywhere within active alarm to delete it.
          \n4. Icons left to right indicate whether vibration, flashlight or rising volume are set up.
          \n5. To disable alarm tap ON button. Unless Repeat Weekly is set in Alarm Settings, alarm will
          get disabled automatically after all of this week\'s alarms got triggered.
    </string>

      <string name="details_help">1. Tap to return to Active Alarms. Current alarm is not saved.
          \n2. Delete current alarm. Helpful if alarm is already in Active Alarms. Otherwise equivalent to [1].
          \n3. Save alarm and return to Active Alarms.
          \n4. Additional Settings and other menu items available there.
          \n5. Tapping on time allows to set alarm time. Digital or analog time picker can be set in [4]\'s Additional Settings.
          \n6. Press to play current alarm. Alarm tone must be set first. Plays at the level set in [7] or gradually increases volume
          if Rising volume is set in [8].
          \n7. Changes volume if Rising volume is not set. Setting to the lowest level equivalent to choosing Silent for Alarm Tone.
          \n8. Utilize available hardware to make alarm more noticeable. Custom vibration and flashlight patterns are available in
          [4]\'s Additional Settings.
          \n9. Pressing phone back key is equivalent to tapping [3] and saving alarm.
      </string>

    <string name="play_no_tone">Choose alarm tone to play.</string>
    <string name="silent">Silent</string>
    <string name="flashlight_icon">flashlight icon</string>
    <string name="vibration_indicator">vibration indicator</string>
    <string name="flashlight_indicator">flashlight indicator</string>
    <string name="rising_volume_indicator">rising volume indicator</string>
    <string name="play_button">play button</string>
    <string name="low_volume_icon">low volume icon</string>
    <string name="high_volume_icon">high volume icon</string>

    <string name="about">
    \nCopyright 2016 by Mikhail Rogozhin
        \n
        \nThis app used backbone structure of open source project
        \ngithub.com/steventrigg/AlarmClock by Steven Trigg.
        \n
        \nAlso following libraries:
        \ngithub.com/JakeWharton/ViewPagerIndicatorby Jake Wharton
        \ngithub.com/code-troopers/android-betterpickers by Derek Brameyer
        \ngithub.com/amlcurran/ShowcaseView by Alex Curran
        \nwere used for parts of GUI under Apache 2.0 License.
        \n
        \nI appreciate your feedback. For any problems or feature suggestions please reach nizhotech@gmail.com
    </string>
    <string name="about_title">FlashAlarm 1.1</string>
    <string name="snooze_after">Snooze after</string>

    <string-array name="minutes">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="seconds">
        <item>0</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>

</resources>
