<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        tools:context=".AlarmDetailsActivity">


        <!--
        <TimePicker
            android:id="@+id/alarm_details_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:scaleY="1.3"
            android:scaleX="1.3"/>


        <RadialPickerLayout android:layout_width="wrap_content">
            android:id="@+id/alarm_details_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"

        </RadialPickerLayout>
        -->
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <RelativeLayout
            android:id="@+id/alarm_time_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="00:00"
                android:textColor="@color/bpWhite"
                android:textSize="@dimen/extra_large_clock_digits" />

            <TextView
                android:id="@+id/details_time_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/time_picker"
                android:layout_toRightOf="@+id/time_picker"
                android:text="am"
                android:textColor="@color/bpWhite"
                android:textSize="@dimen/large_clock_digits" />
        </RelativeLayout>

        <EditText
            android:id="@+id/alarm_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alarm_time_container"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/details_alarm_name"

            />


        <View
            android:id="@+id/divider2"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_name" />

        <nizhogor.com.flashalarm.CustomToggleButton
            android:id="@+id/alarm_details_repeat_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/divider2"
            android:checked="true"
            android:text="@string/details_repeat_weekly" />

        <View
            android:id="@+id/divider1"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_repeat_weekly" />

        <nizhogor.com.flashalarm.CustomToggleButton
            android:id="@+id/alarm_details_repeat_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/divider1"
            android:checked="true"
            android:text="@string/details_sunday" />

        <nizhogor.com.flashalarm.CustomToggleButton
            android:id="@+id/alarm_details_repeat_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_sunday"
            android:layout_below="@+id/alarm_details_repeat_sunday"
            android:checked="true"
            android:text="@string/details_monday" />

        <nizhogor.com.flashalarm.CustomToggleButton
            android:id="@+id/alarm_details_repeat_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_monday"
            android:layout_below="@+id/alarm_details_repeat_monday"
            android:checked="true"
            android:text="@string/details_tuesday" />

        <nizhogor.com.flashalarm.CustomToggleButton
            android:id="@+id/alarm_details_repeat_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_tuesday"
            android:layout_below="@+id/alarm_details_repeat_tuesday"
            android:checked="true"
            android:text="@string/details_wednesday" />

        <nizhogor.com.flashalarm.CustomToggleButton
            android:id="@+id/alarm_details_repeat_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_wednesday"
            android:layout_below="@+id/alarm_details_repeat_wednesday"
            android:checked="true"
            android:text="@string/details_thursday" />

        <nizhogor.com.flashalarm.CustomToggleButton
            android:id="@+id/alarm_details_repeat_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_thursday"
            android:layout_below="@+id/alarm_details_repeat_thursday"
            android:checked="true"
            android:text="@string/details_friday" />

        <nizhogor.com.flashalarm.CustomToggleButton
            android:id="@+id/alarm_details_repeat_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/alarm_details_repeat_friday"
            android:layout_below="@+id/alarm_details_repeat_friday"
            android:checked="true"
            android:text="@string/details_saturday" />

        <View
            android:id="@+id/divider4"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_details_repeat_saturday" />

        <LinearLayout
            android:id="@+id/alarm_ringtone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/divider4"
            android:background="#000"
            android:orientation="vertical">

            <View
                android:id="@+id/divider3"
                style="@style/Divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/alarm_ringtone_container" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/view_touch_selector">

                <LinearLayout
                    android:id="@+id/track_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/view_touch_selector"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/alarm_label_tone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/details_alarm_tone"
                        android:textColor="@color/bpWhite"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/alarm_label_tone_selection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/alarm_label_tone"
                        android:text="@string/details_alarm_tone_default"
                        android:textSize="14sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/play_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/play" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/volume_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/left_volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/thumb_down" />

                <SeekBar
                    android:id="@+id/volume_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_toLeftOf="@+id/right_volume"
                    android:layout_toRightOf="@+id/left_volume"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:max="100"
                    android:progress="50"
                    android:scaleType="fitCenter" />

                <ImageView
                    android:id="@+id/right_volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/thumb" />
            </RelativeLayout>

        </LinearLayout>

        <nizhogor.com.flashalarm.CustomToggleButton
            android:id="@+id/alarm_details_volume_rising"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/alarm_ringtone_container"
            android:checked="true"
            android:text="@string/volume_rising"

            />


        <nizhogor.com.flashalarm.CustomToggleButton
            android:id="@+id/alarm_details_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/alarm_details_volume_rising"
            android:checked="true"
            android:text="@string/vibrate" />

        <nizhogor.com.flashalarm.CustomToggleButton
            android:id="@+id/alarm_details_flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/alarm_details_vibrate"
            android:checked="true"
            android:text="@string/flash" />

    </RelativeLayout>


</ScrollView>